slurm-127412_1.out
  File "unitConversionCandyGum.py", line 6
    if product = 'CANDY':
               ^
SyntaxError: invalid syntax
